# kidneuro-godot

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: build.yml
api/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
api/src/kidneuro/: __init__.py  cli.py  config.py  database.py  main.py  worker.py
api/src/kidneuro/middleware/: auth.py
api/src/kidneuro/migrations/: env.py
api/src/kidneuro/models/: __init__.py  assessment.py  child.py  consent.py  game.py  session.py  user.py
api/src/kidneuro/routers/: analytics.py  assessments.py  auth.py  children.py  consents.py  difficulty.py  games.py  health.py  sessions.py  telemetry.py  users.py
api/src/kidneuro/schemas/: assessment.py  auth.py  child.py  consent.py  session.py  user.py
api/src/kidneuro/services/: assessment_scoring.py  difficulty.py  seed.py
api/tests/: test_health.py
godot/: project.godot
godot/scenes/games/: attention_game.tscn  body_clues.tscn  chat_builder.tscn  emotion_game.tscn  feeling_thermometer.tscn  flex_switch.tscn  focus_filter.tscn  impulse_island.tscn  memory_game.tscn  mind_reader.tscn  pattern_puzzles.tscn  routine_builder.tscn  sensory_space.tscn  social_stories.tscn  time_timer.tscn  trace_draw.tscn  turn_taker.tscn  word_world.tscn
godot/scenes/shared/: game_hud.tscn  reward_popup.tscn
godot/scenes/ui/: game_select.tscn  main_menu.tscn
godot/scripts/autoload/: accessibility_manager.gd  api_client.gd  (+2 more)
mobile/: app.json  eas.json  package.json
mobile/app/: _layout.tsx  index.tsx
nginx/: Dockerfile  nginx.conf
nginx/conf.d/: games.conf
web/: Dockerfile  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/lib/: api.ts  auth.ts  query-provider.tsx  types.ts
(+39 files in other folders)
